packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_jsx.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
expression: output
snapshot_kind: text
---
==INPUT==


import { $, component$, h, Fragment } from '@khulnasoft.com/qwik';

export const Lightweight = (props) => {
    return (
        <div>
            <>
                <div/>
                <button {...props}/>
            </>
        </div>
    )
};

export const Foo = component$((props) => {
    return $(() => {
        return (
            <div>
                <>
                    <div class="class"/>
                    <div class="class"></div>
                    <div class="class">12</div>
                </>
                <div class="class">
                    <Lightweight {...props}/>
                </div>
                <div class="class">
                    <div/>
                    <div/>
                    <div/>
                </div>
                <div class="class">
                    {children}
                </div>
            </div>
        )
    });
}, {
    tagName: "my-foo",
});

============================= test.js ==

import { _jsxQ } from "@khulnasoft.com/qwik";
import { _jsxS } from "@khulnasoft.com/qwik";
import { _jsxC } from "@khulnasoft.com/qwik";
import { componentQrl } from "@khulnasoft.com/qwik";
import { qrl } from "@khulnasoft.com/qwik";
import { Fragment as _Fragment } from "@khulnasoft.com/qwik/jsx-runtime";
export const Lightweight = (props)=>{
    return /*#__PURE__*/ _jsxQ("div", null, null, /*#__PURE__*/ _jsxC(_Fragment, {
        children: [
            /*#__PURE__*/ _jsxQ("div", null, null, null, 3, null),
            /*#__PURE__*/ _jsxS("button", {
                ...props
            }, null, 0, null)
        ]
    }, 1, "u6_0"), 1, "u6_1");
};
export const Foo = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(()=>import("./test.tsx_Foo_component_HTDRsvUbLiE"), "Foo_component_HTDRsvUbLiE"), {
    tagName: "my-foo"
});


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;;AAGA,OAAO,MAAM,cAAc,CAAC;IACxB,qBACI,MAAC,iCACG;;0BACI,MAAC;0BACD,MAAC;gBAAQ,GAAG,KAAK;;;;AAIjC,EAAE;AAEF,OAAO,MAAM,oBAAM,iHAuBhB;IACC,SAAS;AACb,GAAG\"}")
============================= test.tsx_Foo_component_HTDRsvUbLiE.js (ENTRY POINT)==

import { qrl } from "@khulnasoft.com/qwik";
export const Foo_component_HTDRsvUbLiE = (props)=>{
    return /*#__PURE__*/ qrl(()=>import("./test.tsx_Foo_component_1_DvU6FitWglY"), "Foo_component_1_DvU6FitWglY", [
        props
    ]);
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";yCAc8B,CAAC;IAC3B;;;AAsBJ\"}")
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_HTDRsvUbLiE",
  "entry": null,
  "displayName": "test.tsx_Foo_component",
  "hash": "HTDRsvUbLiE",
  "canonicalFilename": "test.tsx_Foo_component_HTDRsvUbLiE",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    283,
    899
  ]
}
*/
============================= test.tsx_Foo_component_1_DvU6FitWglY.js (ENTRY POINT)==

import { useLexicalScope } from "@khulnasoft.com/qwik";
import { Lightweight } from "./test";
import { Fragment as _Fragment } from "@khulnasoft.com/qwik/jsx-runtime";
import { _jsxC } from "@khulnasoft.com/qwik";
import { _jsxQ } from "@khulnasoft.com/qwik";
export const Foo_component_1_DvU6FitWglY = ()=>{
    const [props] = useLexicalScope();
    return /*#__PURE__*/ _jsxQ("div", null, null, [
        /*#__PURE__*/ _jsxC(_Fragment, {
            children: [
                /*#__PURE__*/ _jsxQ("div", null, {
                    class: "class"
                }, null, 3, null),
                /*#__PURE__*/ _jsxQ("div", null, {
                    class: "class"
                }, null, 3, null),
                /*#__PURE__*/ _jsxQ("div", null, {
                    class: "class"
                }, "12", 3, null)
            ]
        }, 3, "u6_2"),
        /*#__PURE__*/ _jsxQ("div", null, {
            class: "class"
        }, /*#__PURE__*/ _jsxC(Lightweight, {
            ...props
        }, 0, "u6_3"), 1, null),
        /*#__PURE__*/ _jsxQ("div", null, {
            class: "class"
        }, [
            /*#__PURE__*/ _jsxQ("div", null, null, null, 3, null),
            /*#__PURE__*/ _jsxQ("div", null, null, null, 3, null),
            /*#__PURE__*/ _jsxQ("div", null, null, null, 3, null)
        ], 3, null),
        /*#__PURE__*/ _jsxQ("div", null, {
            class: "class"
        }, children, 3, null)
    ], 1, "u6_4");
};
export { _hW } from "@khulnasoft.com/qwik";


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;2CAea;;IACL,qBACI,MAAC;sBACG;;8BACI,MAAC;oBAAI,OAAM;;8BACX,MAAC;oBAAI,OAAM;;8BACX,MAAC;oBAAI,OAAM;mBAAQ;;;sBAEvB,MAAC;YAAI,OAAM;yBACP,MAAC;YAAa,GAAG,KAAK;;sBAE1B,MAAC;YAAI,OAAM;;0BACP,MAAC;0BACD,MAAC;0BACD,MAAC;;sBAEL,MAAC;YAAI,OAAM;WACN\"}")
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_1_DvU6FitWglY",
  "entry": null,
  "displayName": "test.tsx_Foo_component_1",
  "hash": "DvU6FitWglY",
  "canonicalFilename": "test.tsx_Foo_component_1_DvU6FitWglY",
  "path": "",
  "extension": "js",
  "parent": "Foo_component_HTDRsvUbLiE",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": true,
  "loc": [
    309,
    895
  ]
}
*/
== DIAGNOSTICS ==

[]
