packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_jsx_keyed.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
expression: output
snapshot_kind: text
---
==INPUT==


import { component$, useStore } from '@khulnasoft.com/qwik';

export const App = component$((props: Stuff) => {
    return (
        <>
            <Cmp key="stuff"></Cmp>
            <Cmp></Cmp>
            <Cmp prop="23"></Cmp>
            <Cmp prop="23" key={props.stuff}></Cmp>
            <p key={props.stuff}>Hello Qwik</p>
        </>
    );
});

============================= test.js ==

import { componentQrl } from "@khulnasoft.com/qwik";
import { qrl } from "@khulnasoft.com/qwik";
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(()=>import("./test.tsx_App_component_ckEPmXZlub0.js"), "App_component_ckEPmXZlub0"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;AAGA,OAAO,MAAM,oBAAM,oHAUhB\"}")
============================= test.tsx_App_component_ckEPmXZlub0.js (ENTRY POINT)==

import { Fragment as _Fragment } from "@khulnasoft.com/qwik/jsx-runtime";
import { _IMMUTABLE } from "@khulnasoft.com/qwik";
import { _jsxC } from "@khulnasoft.com/qwik";
import { _jsxQ } from "@khulnasoft.com/qwik";
export const App_component_ckEPmXZlub0 = (props)=>{
    return /*#__PURE__*/ _jsxC(_Fragment, {
        children: [
            /*#__PURE__*/ _jsxC(Cmp, null, 3, "stuff"),
            /*#__PURE__*/ _jsxC(Cmp, null, 3, "u6_0"),
            /*#__PURE__*/ _jsxC(Cmp, {
                prop: "23",
                [_IMMUTABLE]: {
                    prop: _IMMUTABLE
                }
            }, 3, "u6_1"),
            /*#__PURE__*/ _jsxC(Cmp, {
                prop: "23",
                [_IMMUTABLE]: {
                    prop: _IMMUTABLE
                }
            }, 3, props.stuff),
            /*#__PURE__*/ _jsxQ("p", null, null, "Hello Qwik", 3, props.stuff)
        ]
    }, 1, "u6_2");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;yCAG8B,CAAC;IAC3B,qBACI;;0BACI,MAAC,cAAQ;0BACT,MAAC;0BACD,MAAC;gBAAI,MAAK;;oBAAL,IAAI;;;0BACT,MAAC;gBAAI,MAAK;;oBAAL,IAAI;;kBAAW,MAAM,KAAK;0BAC/B,MAAC,iBAAoB,iBAAb,MAAM,KAAK;;;AAG/B\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_ckEPmXZlub0",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "ckEPmXZlub0",
  "canonicalFilename": "test.tsx_App_component_ckEPmXZlub0",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    94,
    352
  ]
}
*/
== DIAGNOSTICS ==

[]
